fix(rtd): fix `sphinx_rtd_theme` lines in tables do not wrap by default
* `sphinx_rtd_theme` known issue: long lines in tables do not wrap by default
  - https://github.com/rtfd/sphinx_rtd_theme/issues/117

--- a/_static/css/ubports.css
+++ b/_static/css/ubports.css
@@ -17,3 +17,17 @@ p {
 .icon-home {
     font-size: 0 !important;
 }
+
+/* override table width restrictions */
+.wy-table-responsive table th
+, .wy-table-responsive table td
+{
+    /* !important prevents the common CSS stylesheets from
+       overriding this as on RTD they are loaded after this stylesheet */
+    white-space: normal !important;
+}
+
+.wy-table-responsive
+{
+    overflow: visible !important;
+}
